--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
  <h1>DOM Array Methods</h1> 
  <div class="container">
    <div class="buttons">
-    <button class="btn">Add User</button>
-    <button class="btn">Double Money</button>
-    <button class="btn">Show Only Millionaires</button>
-    <button class="btn">Sort by Richest</button>
-    <button class="btn">Calculate Entire Welath</button>
+    <button class="btn">Add User &#128106</button>
+    <button class="btn">Double Money 	&#128176</button>
+    <button class="btn">Show Only Millionaire &#128181</button>
+    <button class="btn">Sort by Richest &#128293</button>
+    <button class="btn">Calculate Entire Welath &#128177</button>
    </div>
    <div class="data">
      <div class="label">
