--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Dom Array Methods</title>
   <link rel="stylesheet" href="style.css"></link>
 </head>
 <body>
@@ -18,7 +18,8 @@
    </div>
    <div class="data">
      <div class="label">
-      
+      <span class="name">Person</span>
+      <span class="wealth">Wealth</span>
      </div>
      <div class="info">
 
