Clean up html & initialize javascript

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
  <h1>DOM Array Methods</h1> 
  <div class="container">
-   <div class="buttons">
-    <button class="btn">Add User &#128106</button>
-    <button class="btn">Double Money 	&#128176</button>
-    <button class="btn">Show Only Millionaire &#128181</button>
-    <button class="btn">Sort by Richest &#128293</button>
-    <button class="btn">Calculate Entire Welath &#128177</button>
+   <div class="buttons" id='buttons'>
+    <button class="btn" id="add">Add User &#128106</button>
+    <button class="btn" id="doub">Double Money 	&#128176</button>
+    <button class="btn" id="show">Show Only Millionaire &#128181</button>
+    <button class="btn" id="sort">Sort by Richest &#128293</button>
+    <button class="btn" id="calc">Calculate Entire Welath &#128177</button>
    </div>
    <div class="data">
      <div class="label">
@@ -26,5 +26,6 @@
      </div>
    </div>
  </div>
+ <script src="script.js"></script>
 </body>
 </html>
