Add addData function

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <span class="name">Person</span>
       <span class="wealth">Wealth</span>
      </div>
-     <div class="info">
+     <div class="info" id="info">
 
      </div>
    </div>
