--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <span class="wealth">Wealth</span>
      </div>
      <div class="info" id="info">
-
      </div>
+    <div class="totalWealth" id="totalWealth"></div>
    </div>
  </div>
  <script src="script.js"></script>
