Add sort function

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
      </div>
      <div class="info" id="info">
      </div>
-    <div class="totalWealth" id="totalWealth"></div>
+    <div class="total" id="total"></div>
    </div>
  </div>
  <script src="script.js"></script>
