--- a/index.html
+++ b/index.html
@@ -9,18 +9,15 @@
 <body>
  <h1>DOM Array Methods</h1> 
  <div class="container">
-   <div class="buttons" id='buttons'>
-    <button class="btn" id="add">Add User &#128106</button>
-    <button class="btn" id="doub">Double Money 	&#128176</button>
-    <button class="btn" id="show">Show Only Millionaire &#128181</button>
-    <button class="btn" id="sort">Sort by Richest &#128293</button>
-    <button class="btn" id="calc">Calculate Entire Welath &#128177</button>
-   </div>
+   <aside id='buttons'>
+    <button id="add">Add User &#128106</button>
+    <button id="doub">Double Money 	&#128176</button>
+    <button id="show">Show Only Millionaire &#128181</button>
+    <button id="sort">Sort by Richest &#128293</button>
+    <button id="calc">Calculate Entire Welath &#128177</button>
+   </aside>
    <div class="data">
-     <div class="label">
-      <span class="name">Person</span>
-      <span class="wealth">Wealth</span>
-     </div>
+      <h2><strong>Person</strong>Wealth</h2>
      <div class="info" id="info">
      </div>
     <div class="total" id="total"></div>
